# CompresionDeHuffman-TeoriaDelLenguaje

./: README.md
C/: .gitignore  C.cbp  CMakeLists.txt  main.c
C/compression/: compression.c  compression.h
C/decompression/: decompression.c  decompression.h
C/decompression/bytes_vector/: bytes_vector.c  bytes_vector.h
C/huffman/: huffman.c  huffman.h  huffman_node.c  huffman_node.h  huffman_tree.c  huffman_tree.h  nodes_list.c  nodes_list.h
Rust/: .gitignore  Cargo.toml
Rust/src/: compression.rs  decompression.rs  huffman.rs  main.rs
Rust/src/Compression/: compression.rs
Rust/src/descompresion/: descompresion.rs
Rust/src/huffman/: huffman_node.rs  huffman_node_option2.rs  huffman_tree.rs  nodes_list.rs
char_frequencies/: char_frequencies.py  char_frequencies.txt
